--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -6,7 +6,7 @@ webhook_url:
 sections:
 - type: directory
   path: src/posts
-  label: Posts
+  label: Feature
   create: documents
   match: "*.md"
 upload_dir: uploads
