Updated file names

--- a/.forestry/front_matter/templates/case-studies.yml
+++ b/.forestry/front_matter/templates/case-studies.yml
@@ -88,7 +88,7 @@ fields:
   default: '2019-08-02T14:00:00Z'
   label: Date
 pages:
-- src/posts/a-scheduled-post-copy.md
-- src/posts/a-scheduled-post.md
+- src/posts/hcd-strategy.md
+- src/posts/telecom-voice-stratey.md
 - src/posts/experience-recruitment.md
 - src/posts/immersive-tech-strategy.md
