--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -16,7 +16,7 @@ collections:
         slug: "{{slug}}"
         create: false
         fields:
-          - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/njk.njk"}
+          - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/homepage.njk"}
           - {label: "SEO Meta Title", name: "metaTitle", widget: "string", required: false}
           - {label: "SEO Meta Description", name: "metaDesc", widget: "string", required: false}
           - {label: "Post Feed Heading", name: "postsHeading", widget: "string", default: "Latest posts"}
@@ -36,20 +36,6 @@ collections:
       - {label: "SEO Meta Description", name: "metaDesc", widget: "string", required: false}
       - {label: "Social Image", name: "socialImage", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
-  - name: "more"
-    label: "Special Pages"
-    files:
-      - name: "more"
-        label: "More"
-        delete: false
-        file: "src/more.md"
-        slug: "{{slug}}"
-        create: false
-        fields:
-          - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/more.njk"}
-          - {label: "SEO Meta Title", name: "metaTitle", widget: "string", required: false}
-          - {label: "SEO Meta Description", name: "metaDesc", widget: "string", required: false}
-          - {label: "Body", name: "body", widget: "markdown"}
   - name: "posts"
     label: "Posts"
     folder: "src/posts"
