--- a/.forestry/front_matter/templates/case-studies.yml
+++ b/.forestry/front_matter/templates/case-studies.yml
@@ -79,7 +79,11 @@ fields:
     max: 
     labelField: 
   label: Content
-- name: images
+- name: beforeImages
+  type: image_gallery
+  config: {}
+  label: Images
+- name: afterImages
   type: image_gallery
   config: {}
   label: Images
