--- a/.forestry/front_matter/templates/about-me.yml
+++ b/.forestry/front_matter/templates/about-me.yml
@@ -12,6 +12,11 @@ fields:
   config:
     required: false
   label: Name
+- name: slogan
+  type: text
+  config:
+    required: false
+  label: Slogan
 - name: blurb
   type: textarea
   default: ''
@@ -21,6 +26,15 @@ fields:
     schema:
       format: html-blocks
   label: Blurb content
+- name: midheadline
+  type: textarea
+  default: ''
+  config:
+    required: false
+    wysiwyg: true
+    schema:
+      format: html-blocks
+  label: Middle Headline
 - name: aboutme
   type: field_group_list
   fields:
