Mass new design update

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -34,6 +34,8 @@ collections:
       - {label: "Permalink Override (Pattern: '/your-slug/index.html')", name: "permalink", widget: "string", required: false}
       - {label: "SEO Meta Title", name: "metaTitle", widget: "string", required: false}
       - {label: "SEO Meta Description", name: "metaDesc", widget: "string", required: false}
+      - {label: "Page Heading", name: "pageHeading", widget: "string", default: "Heading", required: true}
+      - {label: "Page SubTitle", name: "pageSubTit", widget: "string", required: false}
       - {label: "Social Image", name: "socialImage", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "posts"
