--- a/.forestry/front_matter/templates/about-me.yml
+++ b/.forestry/front_matter/templates/about-me.yml
@@ -35,6 +35,20 @@ fields:
     schema:
       format: html-blocks
   label: Middle Headline
+- name: featuredWorkHeadline
+  type: textarea
+  default: ''
+  config:
+    required: false
+    wysiwyg: true
+    schema:
+      format: html-blocks
+  label: Featured Work Headline
+- name: featuredWorkDesc
+  type: text
+  config:
+    required: false
+  label: Featured Work Desc
 - name: aboutme
   type: field_group_list
   fields:
