--- a/.forestry/front_matter/templates/generic-page.yml
+++ b/.forestry/front_matter/templates/generic-page.yml
@@ -12,7 +12,7 @@ fields:
   label: Page Components
   template_types:
   - header
-  - case-study-feature
+  - columns-block
   - case-study-gallery
   - testimonial-gallery
   - cta
