--- a/.forestry/front_matter/templates/plain-text.yml
+++ b/.forestry/front_matter/templates/plain-text.yml
@@ -16,3 +16,13 @@ fields:
     schema:
       format: html
   label: BodyContent
+- name: embedContent
+  type: textarea
+  default: ''
+  config:
+    required: false
+    wysiwyg: true
+    schema:
+      format: markdown
+  label: Address
+  description: Please copy and paste embed code
