--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -47,7 +47,7 @@ sections:
   create: all
   match: "**/*"
   templates:
-  - testimonial
+  - deliverables
 - type: directory
   path: src/publications
   label: Publications
