fixed missing component switch

--- a/.forestry/front_matter/templates/generic-page.yml
+++ b/.forestry/front_matter/templates/generic-page.yml
@@ -15,6 +15,7 @@ fields:
   - columns-block
   - case-study-gallery
   - testimonial-gallery
+  - deliverable-gallery
   - cta
   - 1-text-col
   - plain-text
