--- a/.forestry/front_matter/templates/generic-page.yml
+++ b/.forestry/front_matter/templates/generic-page.yml
@@ -22,6 +22,7 @@ fields:
   - comparison-gallery
   - feature-content
   - metrics
+  - 4-col
   - image-gallery
   - mid-header
   - full-bleed-image
